Adds autoloading config

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
     "minimum-stability": "dev",
     "config": {
         "bin-dir": "bin"
+    },
+    "autoload": {
+        "psr-0": { "Wj\\Shift": "src" }
     }
 }
