Changed composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wouterj/shift",
+    "name": "shift/shift",
     "description": "A event-driven MOVE framework",
     "license": "MIT",
     "authors": [
