--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
 
     "require": {
-        "symfony/http-foundation": "~2.3"
+        "symfony/http-foundation": "~2.3",
+        "doctrine/annotations": "~1.1"
     },
     "require-dev": {
         "mockery/mockery": "~0.8"
